# ssl4eo_eu_forest

./: README.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
ssl4eo_eu_forest/: __init__.py  dataset.py  ssl4eo_eu_forest.py  ssl4eo_eu_forest_hf.py  utils.py
tests/: test_dataset.py  test_ssl4eo_eu_forest.py  test_ssl4eo_eu_forest_hf.py  test_utils.py
